
pkginclude_HEADERS = \
	BP_Endpoint.h\
	BP_Proxy.h  \
	BP_Scene.h  \
	GEN_List.h  \
	IOgreCollisionShape.h  \
	OgreBoxCollisionShape.h  \
	OgreBroadPhase.h  \
	OgreCapsule.h  \
	OgreCapsuleMeshCollisionShape.h  \
	OgreCollisionContext.h  \
	OgreCollisionManager.h  \
	OgreCollisionObject.h  \
	OgreCollisionReporter.h  \
	OgreCollisionTypes.h  \
	OgreEntityCollisionShape.h  \
	OgreMeshCollisionShape.h  \
	OgreNodes.h  \
	OgreOpcode.h  \
	OgreOpcodeCharacterController.h  \
	OgreOpcodeDebugObject.h  \
	OgreOpcodeExports.h  \
	OgreOpcodeLine.h  \
	OgreOpcodeMath.h  \
	OgreOpcodeRay.h  \
	OgreOpcodeTerrainData.h  \
	OgreOpcodeUtils.h  \
	OgreOrientedBox.h  \
	OgrePtrCollisionShape.h  \
	OgreSphereMeshCollisionShape.h  \
	OgreTerrainCollisionShape.h  \
	OgreTriangle.h

EXTRA_DIST = \
	$(pkginclude_HEADERS)

SUBDIRS = \
	Opcode

## File created by the gnome-build tools

