pkgincludedir=$(prefix)/include/Opcode
pkginclude_HEADERS = \
	OPC_AABBCollider.h\
	OPC_AABBTree.h \
	OPC_BaseModel.h \
	OPC_BoxBoxOverlap.h \
	OPC_BoxPruning.h \
	OPC_Collider.h \
	OPC_Common.h \
	OPC_HybridModel.h \
	OPC_IceHook.h \
	OPC_LSSAABBOverlap.h \
	OPC_LSSCollider.h \
	OPC_LSSTriOverlap.h \
	OPC_MeshInterface.h \
	OPC_Model.h \
	OPC_OBBCollider.h \
	Opcode.h \
	OPC_OptimizedTree.h \
	OPC_Picking.h \
	OPC_PlanesAABBOverlap.h \
	OPC_PlanesCollider.h \
	OPC_PlanesTriOverlap.h \
	OPC_RayAABBOverlap.h \
	OPC_RayCollider.h \
	OPC_RayTriOverlap.h \
	OPC_Settings.h \
	OPC_SphereAABBOverlap.h \
	OPC_SphereCollider.h \
	OPC_SphereTriOverlap.h \
	OPC_SweepAndPrune.h \
	OPC_TreeBuilders.h \
	OPC_TreeCollider.h \
	OPC_TriBoxOverlap.h \
	OPC_TriTriOverlap.h \
	OPC_TriTriOverlapGilvan.h \
	OPC_VolumeCollider.h \
	Stdafx.h

EXTRA_DIST = \
	$(pkginclude_HEADERS)

SUBDIRS = \
	Ice

## File created by the gnome-build tools

