pkgincludedir=$(prefix)/include/Opcode/Ice
pkginclude_HEADERS = \
	IceAABB.h   \
	IceAxes.h   \
	IceBoundingSphere.h   \
	IceContainer.h   \
	IceFPU.h   \
	IceHPoint.h   \
	IceIndexedTriangle.h   \
	IceLSS.h   \
	IceMatrix3x3.h   \
	IceMatrix4x4.h   \
	IceMemoryMacros.h   \
	IceOBB.h   \
	IcePairs.h   \
	IcePlane.h   \
	IcePoint.h   \
	IcePreprocessor.h   \
	IceRandom.h   \
	IceRay.h   \
	IceRevisitedRadix.h   \
	IceSegment.h   \
	IceTriangle.h   \
	IceTriList.h   \
	IceTypes.h   \
	IceUtils.h

EXTRA_DIST = \
	$(pkginclude_HEADERS)

## File created by the gnome-build tools

